# griffin

./: Cargo.toml  README.md
src/: lib.rs  main.rs  resolver.rs  scan.rs
src/config/: builder.rs  defaults.rs  errors.rs  mod.rs  models.rs  traits.rs
src/config/strategies/: cli_loader.rs  env_loader.rs  mod.rs
src/domain/: errors.rs  mod.rs  models.rs  parsers.rs  serializers.rs
src/fuzzer/: enums.rs  errors.rs  mod.rs  traits.rs
src/fuzzer/strategies/: addition.rs  azerty_typo.rs  bitsquatting.rs  cyrillic.rs  dot_typo.rs  homoglyph.rs  hyphen.rs  hyphen_typo.rs  insertion.rs  map.rs  mod.rs  omission.rs  plural.rs  qwerty_typo.rs  qwertz_typo.rs  repetition.rs
