[package]
name = "griffin"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
clap = { version = "4.5.0", features = ["derive"] }
futures = "0.3.30"
itertools = "0.12.1"
thiserror = "1.0.57"
tokio = { version = "1.36.0", features = ["full"] }
trust-dns-resolver = "0.23.2"
